# wordart

./: .babelrc  .gitignore  _redirects  data.json  jest.config.json  netlify.toml  next.config.js  package-lock.json  package.json  tsconfig.json
api/: package.json
api/src/: main.ts
api/test/: app.e2e-spec.ts
components/layout/: index.tsx
lib/wordart/: canvas-utils.ts  geometry.ts  scratch-v1.tsx  scratch.tsx  spirals.ts  types.ts
pages/: _app.tsx  _document.tsx  about.tsx  index.tsx
public/: manifest.webmanifest  robots.txt  sitemap.xml
public/fonts/: config.json  fonts.json
public/icons/: icons-fa-brands.json  icons-fa-regular.json  icons-fa-solid.json
public/shapes/: shape-categories.json  shapes.json
src/: config.ts  plans.ts  root-store.ts  urls.ts  use-debounce.ts  use-toasts.ts
src/chakra/: index.ts
src/constants/: messages.ts
src/data/: fonts.ts  icon-categories.ts  icons-fa-brands.ts  icons-fa-regular.ts  icons-fa-solid.ts  icons.ts  shapes-animals.ts  shapes-geo.ts  shapes-geometry.ts  (+1 more)
src/lib/wordart/wasm/wasm-gen/: Cargo.toml  LICENSE_MIT
src/lib/wordart/wasm/wasm-gen/pkg/: image_to_shapes.rs  package.json  wasm_gen.d.ts  wasm_gen.js  wasm_gen_bg.d.ts  wasm_gen_bg.wasm  wasm_gen_types.d.ts
src/lib/wordart/wasm/wasm-gen/src/: hbounds.rs  hbounds_cd.rs  image_to_shapes.rs  largest_rect.rs  layout_gen.rs  layout_gen_js.rs  lib.rs  matrix.rs  utils.rs
styles/: theme.ts
tools/: fonts-config.js  generate-fonts.js  generate-icons.js  generate-shapes.js  import-google-fonts.js  scrape-wordart-fonts.js  wordart-fonts-config.js
(+294 files in other folders)
