[package]
authors = ["Dmitriy Borodiy <dmitriy.borodiy@gmail.com>"]
edition = "2018"
name = "wasm-gen"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# default = ["console_error_panic_hook"]
default = []

[dependencies]
deltae = "0.2.1"
palette = "0.5"
quadtree-cd = "0.1.0"
serde_derive = "^1.0.59"
spaceindex = "0.3"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = {version = "0.1.6", optional = true}

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = {version = "0.4.2", optional = true}

[dev-dependencies]
wasm-bindgen-test = "0.2"

[dependencies.serde]
features = ["rc"]
version = "^1.0.59"

[dependencies.web-sys]
features = [
  "console",
]
version = "0.3"

[dependencies.wasm-bindgen]
features = ["serde-serialize"]
version = "^0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
